2002-10-21  Bastien Nocera  <hadess@hadess.net>

	* data/playlist.glade: added repeat check button
	* data/totem.schemas.in: added repeat configuration
	* src/gtk-playlist.c: (repeat_button_toggled), (update_repeat_cb),
	(init_config), (gtk_playlist_init), (gtk_playlist_new),
	(gtk_playlist_has_next_mrl), (gtk_playlist_set_next): add support for
	repeat, pressing next in repeat mode from the last song goes to the
	beginning of the list (Closes: #96048)
	* src/totem.c: (on_recent_file_activate): fix a leak when filename was
	NULL

2002-10-21  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_tree_selection_has_selected_foreach),
	(gtk_tree_selection_has_selected): urgh, still learning C bud ?

2002-10-21  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_tree_selection_has_selected_foreach),
	(gtk_tree_selection_has_selected), (selection_changed),
	(init_treeview): make the removed button's state depend on wether we
	have a selection or not, fixed a bug in the class_init (wrong offset
	for the current-removed signal
	* src/totem.c: (totem_action_set_mrl), (current_removed_cb): stop the
	playback when the current song is removed, and the playlist is empty

2002-10-21  Bastien Nocera  <hadess@hadess.net>

	* data/playlist.glade: the remove button is disabled by default
	* src/totem.c: (on_recent_file_activate): use
	gnome_vfs_get_local_path_from_uri rather than g_filename_from_uri, the
	glib function doesn't like non-UTF8

2002-10-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_set_mrl), (seek_cb): patch by John
	McCutchan <ttb@tentacle.dhs.org>, to move the correct seekbars around

2002-10-19  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: added prefs dialog (not hooked yet)
	* data/totem.schemas.in: added VCD/DVD device configuration
	(Closes:#95653), default is /dev/cdrom, both Debian and Red Hat create
	the link by default
	* src/gtk-xine.c: (load_config_from_gconf): added support for optical