@@ -1,5 +1,12 @@
 2002-10-21  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem.c: (on_preferences1_activate), (hide_prefs),
+	(update_buttons), (totem_callback_connect),
+	(totem_setup_preferences), (main): add basic code for the preferences
+	dialog
+
+2002-10-21  Bastien Nocera  <hadess@hadess.net>
+
 	* data/playlist.glade: added repeat check button
 	* data/totem.schemas.in: added repeat configuration
 	* src/gtk-playlist.c: (repeat_button_toggled), (update_repeat_cb),
